# Echo-Rover

./: README.md
src/b2/: .coveragerc  .travis.rosinstall  .travis.yml  CMakeLists.txt  README.md  notes.txt  package.xml  rosdep.yaml  setup.py
src/b2/design/: Obstacle_Navigation.xml
src/b2/launch/: b2.launch  base.launch  base.test  base_only.launch  dev.launch  pilot.test  sensors.flip_dev.launch  sensors.test  teleop.launch
src/b2/msg/: Proximity.msg
src/b2/nodes/: base_node.py  pilot_node.py  sensors_node.py  teleop_node.py
src/b2/scripts/: extend_rosdep.sh  ici_after_script.sh
src/b2/tests/: run_tests.sh  run_units.sh
src/dodo_detector_ros/: CMakeLists.txt
src/dodo_detector_ros/config/: main_config.yaml
src/dodo_detector_ros/src/: detector.py
src/edgebot/edgebot_bringup/: CMakeLists.txt  package.xml
src/edgebot/edgebot_bringup/config/: localization.yaml  zed_config.yaml
src/edgebot/edgebot_bringup/launch/: main.launch
src/edgebot/edgebot_bringup/launch/include/: ekf.launch  findobj.launch  imu.launch  localization.launch  ltp.launch  object_detection.launch  rplidar.launch
src/edgebot/edgebot_control/: CMakeLists.txt  package.xml
src/edgebot/edgebot_control/config/: motors_base.yaml
src/edgebot/edgebot_control/config/ew_config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_planner.yaml
src/edgebot/edgebot_control/config/movebase/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/edgebot/edgebot_control/config/teb_config/: costmap_common.yaml  move_base.yaml
src/edgebot/edgebot_control/launch/: motors.launch  movebase.launch  teleop.launch
src/edgebot/edgebot_description/: CMakeLists.txt  package.xml
src/edgebot/edgebot_description/meshes/: back_left_wheel_link.STL  back_right_wheel_link.STL  frame_link.STL  front_right_wheel_link.STL  imu_link.STL  lidar_link.STL  middle_left_wheel_link.STL  middle_right_wheel_link.STL  wheel.STL  zed_link.STL
src/edgebot/edgebot_description/rviz/: edge.rviz
src/edgebot/edgebot_description/urdf/: edgemodel.urdf  wildframe.urdf
src/edgebot/edgebot_gazebo/: CMakeLists.txt  package.xml
src/edgebot/edgebot_navigation/: CMakeLists.txt  package.xml
src/edgebot/edgebot_robot/: package.xml
src/edgebot/edgebot_visualization/: CMakeLists.txt  package.xml
src/edgebot/edgebot_visualization/rviz/: urdf.rviz
(+25 files in other folders)
