<?xml version="1.0"?>
<package format="2">
  <name>edgebot_description</name>
  <version>1.0.0</version>
  <description>The panther_description package</description>

  <maintainer email="rafcin.s@gmail.com">Raf Szuminski</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
 
</package>
