<?xml version="1.0"?>
<package>
  <name>edgebot_robot</name>
  <version>0.1.0</version>
  <description>
	Edgebot meta package provides all the basic drivers for running and using a this robot
  </description>

  
  <maintainer email="rafcin.s@gmail.com">Raf Szuminski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>edgebot_bringup</run_depend>
  <run_depend>edgebot_description</run_depend>
  <run_depend>edgebot_control</run_depend>
  <run_depend>edgebot_gazebo</run_depend>
  <run_depend>edgebot_navigation</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
