<?xml version="1.0"?>
<package>
  <name>edgebot_visualization</name>
  <version>0.1.0</version>
  <description>
	This is a collector of all visualizations
  </description>

  
  <maintainer email="rafcin.s@gmail.com">Raf Szuminski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

</package>
